--- a/index.html
+++ b/index.html
@@ -120,37 +120,45 @@
           <div class="partner__container">
             <div class="partner__title">Our partners.</div>
             <div class="partner__link">
-              <img
-                src="./img/Vector (2).png"
-                alt=""
-                class="partner__link-img"
-              />
-              <img
-                src="./img/Vector (3).png"
-                alt=""
-                class="partner__link-img"
-              /><img
-                src="./img/dogs.png"
-                alt=""
-                class="partner__link-img"
-              /><img
-                src="./img/Vector (5).png"
-                alt=""
-                class="partner__link-img"
-              />
-              <br /><img
-                src="./img/surfbot.png"
-                alt=""
-                class="partner__link-img"
-              /><img
-                src="./img/wildbeast.png"
-                alt=""
-                class="partner__link-img"
-              /><img
-                src="./img/flexblog.png"
-                alt=""
-                class="partner__link-img"
-              /><img src="./img/lescone.png" alt="" class="partner__link-img" />
+              <div class="partner__link-child">
+                <img
+                  src="./img/Vector (2).png"
+                  alt=""
+                  class="partner__link-img"
+                />
+                <img
+                  src="./img/Vector (3).png"
+                  alt=""
+                  class="partner__link-img"
+                /><img
+                  src="./img/dogs.png"
+                  alt=""
+                  class="partner__link-img"
+                /><img
+                  src="./img/Vector (5).png"
+                  alt=""
+                  class="partner__link-img"
+                />
+              </div>
+              <div class="partner__link-child">
+                <img
+                  src="./img/surfbot.png"
+                  alt=""
+                  class="partner__link-img"
+                /><img
+                  src="./img/wildbeast.png"
+                  alt=""
+                  class="partner__link-img"
+                /><img
+                  src="./img/flexblog.png"
+                  alt=""
+                  class="partner__link-img"
+                /><img
+                  src="./img/lescone.png"
+                  alt=""
+                  class="partner__link-img"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -282,4 +290,5 @@
       </div>
     </div>
   </body>
+  <script src="./index.js"></script>
 </html>
