--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <div class="header__container">
             <div class="header__nav">
               <div class="logo">bikcraft</div>
+              <div class="header__icon"><i class="fas fa-bars header__icon-bar"></i></div>
               <div class="header__bar">
                 <a href="" class="header__bar-link">Bicycles</a>
                 <a href="" class="header__bar-link">Insurance</a>
@@ -71,7 +72,7 @@
       <div class="feature">
         <img src="./img/diferencial.png" alt="" class="feature__img" />
         <img alt="img" src="./img/dec.png" class="feature__img-dec" />
-        <div class="container">
+        <div class="container feature__index">
           <div class="feature__container">
             <div class="feature__title-small">Advanced technology</div>
             <div class="feature__title">
@@ -169,11 +170,11 @@
           <img alt="img" src="./img/dec.png" class="end__img-dec1" />
           <img alt="img" src="./img/dec.png" class="end__img-dec2" />
           <div class="end__quotes">
-            <img src="./img/“.png" alt="" />
+            <img class="quotes" src="./img/“.png" alt="" />
             Cycling has always been my passion, what the people at Bikcraft have
             done is intensify my love for this activity. I recommend it to
             everyone I love.
-            <img src="./img/”.png" alt="" />
+            <img class="quotes" src="./img/”.png" alt="" />
           </div>
           <div class="end__name">Ana Julia</div>
         </div>
@@ -249,7 +250,7 @@
       <div class="footer">
         <div class="licene">Bikcraft © Alguns rireitos reservados.</div>
         <div class="container footer__container">
-          <div class="logo">bikcraft</div>
+          <div class="logo footer__logo">bikcraft</div>
           <div class="footer__contact">
             <div class="footer__title">CONTACT</div>
             <div class="contact__text">
